# vocab-tui

./: README.md  boss.py  main.py  models.py  progress.json  pyproject.toml  storage.py  ui.py  word_ai.py  words.csv
docs/: network_install.md
